rework all struct
