# docs/swagger.json
@@ -12,7 +12,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/rates": {
+        "/rates": {
             "get": {
                 "description": "Возвращает массив актуальных курсов всех криптовалют",
                 "consumes": [
@@ -44,9 +44,9 @@
                 }
             }
         },
-        "/api/rates/{symbol}": {
+        "/rates/{symbol}": {
             "get": {
-                "description": "Возвращает актуальный курс криптовалюты по символу (например, BTCUSDT)",
+                "description": "Возвращает актуальный курс криптовалюты по символу (например: BTCUSDT)",
                 "consumes": [
                     "application/json"
                 ],
@@ -103,10 +103,14 @@
                 "price": {
                     "type": "string"
                 },
-                "priceChangePercent": {
+                "priceChangePercent1h": {
+                    "type": "string"
+                },
+                "priceChangePercent24h": {
                     "type": "string"
                 },
                 "symbol": {
+                    "description": "заполнение полей - слева- их название в структуре,а справа значение которое в это поле кладём",
                     "type": "string"
                 }
             }
